refactor: prefer getFirst() over get(0)
There are still some `get(0)` when `get(1)` is nearby.